# pulpino_ppu_pv1

sw/: CMakeLists.txt  cmake_configure.riscv.taffo.sh  cmake_configure.zeroriscy.taffo.sh
sw/apps/: CMakeLists.txt
sw/apps/fft/: CMakeLists.txt
sw/apps/fft/src/: fft.cpp  fourier.cpp  fourier.hpp
sw/apps/fpbench/: CMakeLists.txt  validate.py
sw/apps/fpbench/CX/: CMakeLists.txt  CX.c  data.h  datagenerator.py
sw/apps/fpbench/CY/: CMakeLists.txt  CY.c  data.h
sw/apps/fpbench/Cradius/: CMakeLists.txt  Cradius.c  data.h  datagenerator.py
sw/apps/fpbench/Ctheta/: CMakeLists.txt  Ctheta.c  data.h  datagenerator.py
sw/apps/fpbench/azimuth/: CMakeLists.txt  azimuth.c  data.h  datagenerator.py
sw/apps/fpbench/carbonGas/: CMakeLists.txt  carbonGas.c  data.h  datagenerator.py
sw/apps/fpbench/doppler/: CMakeLists.txt  data.h  datagenerator.py  doppler.c
sw/apps/fpbench/instantCurrent/: CMakeLists.txt  data.h  instantCurrent.c
sw/apps/fpbench/jetEngine/: CMakeLists.txt  data.h  datagenerator.py  jetEngine.c
sw/apps/fpbench/leadLag/: CMakeLists.txt  data.h  datagenerator.py  leadLag.c
sw/apps/fpbench/triangle/: CMakeLists.txt  data.h  triangle.c
sw/apps/fpbench/turbine/: CMakeLists.txt  data.h  datagenerator.py  turbine.c
sw/apps/posit_tests/: CMakeLists.txt  intrinsics.h  miniblas.h  posit_conversion.c  posit_ops.c
sw/apps/taffo_tests/: CMakeLists.txt  taffo_tests.c
sw/libs/string_lib/: CMakeLists.txt
sw/libs/string_lib/src/: qprintf.c
